# simple-etl-lol

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
models/: match.py
riot_etl/managers/: db_manager.py  match_manager.py  rate_limit_manager.py  riot_request_manager.py
riot_etl/models/: match.py  summoner.py
riot_etl/scraper/: scraper.py
